--- a/package.json
+++ b/package.json
@@ -78,11 +78,13 @@
     "intl": "^1.1.0",
     "intl-locales-supported": "^1.0.0",
     "intl-messageformat": "^1.3.0",
+    "iscroll": "^5.2.0",
     "jquery": "^3.2.1",
     "react": "16.2.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "16.2.0",
     "react-intl": "^2.3.0",
+    "react-iscroll": "^2.0.3",
     "react-masonry-component": "^6.0.2",
     "react-mixin": "^3.0.4",
     "react-onclickoutside": "^6.7.1",
