--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "intl-locales-supported": "^1.0.0",
     "intl-messageformat": "^1.3.0",
     "iscroll": "^5.2.0",
+    "ismobilejs": "^0.4.1",
     "jquery": "^3.2.1",
     "react": "16.2.0",
     "react-custom-scrollbars": "^4.2.1",
