--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "react-router": "3.0.5",
     "react-scroll": "^1.7.7",
     "react-slick": "^0.23.1",
+    "react-text-truncate": "^0.13.1",
     "react-transition-group": "^2.4.0",
     "react-visibility-sensor": "^4.1.3",
     "redux": "^3.3.1",
